<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.adicionar.CreateMarkFragment"
        android:label="@string/menu_add_mark"
        tools:layout="@layout/fragment_create_mark" />

    <fragment
        android:id="@+id/nav_add"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.gallery.CadastrarFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_cadastrar" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_about"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.com.envolvedesenvolve.alcoolaqui.ui.sair.SairFragment"
        android:label="@string/menu_sair"
        tools:layout="@layout/fragment_sair" />
</navigation>